Updated Course Materials

--- a/classes/lesson-01/code/topic_model_code_explained.ipynb
+++ b/classes/lesson-01/code/topic_model_code_explained.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -113,9 +113,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### We want to define the parameters for the topic model\n",
+    "##### We want to define the parameters for the topic model\n",
     "\n",
-    "We want to only use the 300 most common words in our text for calculating the topic model\n",
+    "We want to only use the 500 most common words in our text for calculating the topic model\n",
     "\n",
     "We want the topic model to have 3 topics"
    ]
@@ -205,6 +205,15 @@
     "tf_feature_names = tf_vectorizer.get_feature_names()\n",
     "print_top_words(lda, tf_feature_names, n_top_words)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
