Updated Python and Jupyter files

--- a/classes/lesson-01/code/starter-code-1.ipynb
+++ b/classes/lesson-01/code/starter-code-1.ipynb
@@ -25,6 +25,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Hello"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
