--- a/classes/lesson-01/code/topic_model_code_explained.ipynb
+++ b/classes/lesson-01/code/topic_model_code_explained.ipynb
@@ -18,14 +18,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "from __future__ import print_function\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer, CountVectorizer\n",
     "from sklearn.decomposition import LatentDirichletAllocation\n",
-    "import textclean"
+    "import textclean\n",
+    "print(\"Hello\")"
    ]
   },
   {
@@ -151,7 +152,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -172,14 +173,14 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "print(\"Fitting LDA models with tf features, n_samples=%d and n_features=%d...\"\n",
     "      % (n_samples, n_features))\n",
     "lda = LatentDirichletAllocation(n_topics=n_topics, max_iter=5, learning_method='online', learning_offset=50., random_state=0)\n",
-    "t0 = time()\n",
+    "\n",
     "lda.fit(tf)"
    ]
   },
@@ -189,14 +190,14 @@
    "source": [
     "#### We want to see the top 10 words associated with each topic\n",
     "\n",
-    "We use our \"print_top_words\" function that we created at the top"
+    "We use our \"print_top_words\" function that we created at the top to print the top 10 words associated with each topic."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -205,15 +206,6 @@
     "tf_feature_names = tf_vectorizer.get_feature_names()\n",
     "print_top_words(lda, tf_feature_names, n_top_words)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
