Updated slides and activity

--- a/classes/lesson-02/code/data-parsing-mining-activity.ipynb
+++ b/classes/lesson-02/code/data-parsing-mining-activity.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Pandas basics"
+    "## Pandas | Data Parsing and Mining"
    ]
   },
   {
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -53,11 +53,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['survived',\n",
+       " 'pclass',\n",
+       " 'name',\n",
+       " 'sex',\n",
+       " 'age',\n",
+       " 'sibsp',\n",
+       " 'parch',\n",
+       " 'ticket',\n",
+       " 'fare',\n",
+       " 'cabin',\n",
+       " 'embarked']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "list(df.columns.values)"
    ]
@@ -71,11 +92,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "891\n"
+     ]
+    }
+   ],
    "source": [
     "print len(df.index)"
    ]
@@ -89,11 +118,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        male\n",
+       "1      female\n",
+       "2      female\n",
+       "3      female\n",
+       "4        male\n",
+       "5        male\n",
+       "6        male\n",
+       "7        male\n",
+       "8      female\n",
+       "9      female\n",
+       "10     female\n",
+       "11     female\n",
+       "12       male\n",
+       "13       male\n",
+       "14     female\n",
+       "15     female\n",
+       "16       male\n",
+       "17       male\n",
+       "18     female\n",
+       "19     female\n",
+       "20       male\n",
+       "21       male\n",
+       "22     female\n",
+       "23       male\n",
+       "24     female\n",
+       "25     female\n",
+       "26       male\n",
+       "27       male\n",
+       "28     female\n",
+       "29       male\n",
+       "        ...  \n",
+       "861      male\n",
+       "862    female\n",
+       "863    female\n",
+       "864      male\n",
+       "865    female\n",
+       "866    female\n",
+       "867      male\n",
+       "868      male\n",
+       "869      male\n",
+       "870      male\n",
+       "871    female\n",
+       "872      male\n",
+       "873      male\n",
+       "874    female\n",
+       "875    female\n",
+       "876      male\n",
+       "877      male\n",
+       "878      male\n",
+       "879    female\n",
+       "880    female\n",
+       "881      male\n",
+       "882    female\n",
+       "883      male\n",
+       "884      male\n",
+       "885    female\n",
+       "886      male\n",
+       "887    female\n",
+       "888    female\n",
+       "889      male\n",
+       "890      male\n",
+       "Name: sex, dtype: object"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df['sex']\n",
     "\n",
@@ -135,7 +236,12 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "N = 5\n",
+    "\n",
+    "print df.head(N)\n",
+    "print df.tail(N)"
+   ]
   },
   {
    "cell_type": "markdown",
