--- a/classes/lesson-02/code/data-parsing-mining-activity.ipynb
+++ b/classes/lesson-02/code/data-parsing-mining-activity.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -53,32 +53,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['survived',\n",
-       " 'pclass',\n",
-       " 'name',\n",
-       " 'sex',\n",
-       " 'age',\n",
-       " 'sibsp',\n",
-       " 'parch',\n",
-       " 'ticket',\n",
-       " 'fare',\n",
-       " 'cabin',\n",
-       " 'embarked']"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "list(df.columns.values)"
    ]
@@ -92,19 +71,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "891\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print len(df.index)"
    ]
@@ -118,89 +89,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0        male\n",
-       "1      female\n",
-       "2      female\n",
-       "3      female\n",
-       "4        male\n",
-       "5        male\n",
-       "6        male\n",
-       "7        male\n",
-       "8      female\n",
-       "9      female\n",
-       "10     female\n",
-       "11     female\n",
-       "12       male\n",
-       "13       male\n",
-       "14     female\n",
-       "15     female\n",
-       "16       male\n",
-       "17       male\n",
-       "18     female\n",
-       "19     female\n",
-       "20       male\n",
-       "21       male\n",
-       "22     female\n",
-       "23       male\n",
-       "24     female\n",
-       "25     female\n",
-       "26       male\n",
-       "27       male\n",
-       "28     female\n",
-       "29       male\n",
-       "        ...  \n",
-       "861      male\n",
-       "862    female\n",
-       "863    female\n",
-       "864      male\n",
-       "865    female\n",
-       "866    female\n",
-       "867      male\n",
-       "868      male\n",
-       "869      male\n",
-       "870      male\n",
-       "871    female\n",
-       "872      male\n",
-       "873      male\n",
-       "874    female\n",
-       "875    female\n",
-       "876      male\n",
-       "877      male\n",
-       "878      male\n",
-       "879    female\n",
-       "880    female\n",
-       "881      male\n",
-       "882    female\n",
-       "883      male\n",
-       "884      male\n",
-       "885    female\n",
-       "886      male\n",
-       "887    female\n",
-       "888    female\n",
-       "889      male\n",
-       "890      male\n",
-       "Name: sex, dtype: object"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df['sex']\n",
+    "print df['sex']\n",
     "\n",
     "#or\n",
     "\n",
-    "df.sex"
+    "print df.sex"
    ]
   },
   {
@@ -219,7 +118,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "df[[\"sex\",\"fare\"]]"
+    "print df[[\"sex\",\"fare\"]]"
    ]
   },
   {
@@ -233,13 +132,23 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "N = 5\n",
     "\n",
-    "print df.head(N)\n",
+    "print df.head(N)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "print df.tail(N)"
    ]
   },
