--- a/projects/unit-projects/unit-project-1/starter-code/project1-starter.ipynb
+++ b/projects/unit-projects/unit-project-1/starter-code/project1-starter.ipynb
@@ -6,7 +6,9 @@
    "source": [
     "# Project 1\n",
     "\n",
-    "In this first project you will create a framework to scope out data science projects. This framework will provide you with a guide to develop a well-articulated problem statement and analysis plan that will be robust and reproducible."
+    "In this first project you will create a framework to scope out data science projects. This framework will provide you with a guide to develop a well-articulated problem statement and analysis plan that will be robust and reproducible.\n",
+    "\n",
+    "Let's start with an example problem statement first, and then move on to working with the admission dataset"
    ]
   },
   {
@@ -63,7 +65,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 4. What is the hypothesis?"
+    "#### 4. What is the hypothesis (exp?"
    ]
   },
   {
@@ -91,7 +93,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Answer: \n",
+    "Answer (you should change the entered information in the table to match your admissions data: \n",
     "\n",
     "Variable | Description | Type of Variable\n",
     "---| ---| ---\n",
@@ -166,7 +168,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    Using the above information, write a well-formed problem statement. \n"
+    "    Using the above information, write a well-formed problem statement using variables of your choice. \n"
    ]
   },
   {
