--- a/projects/unit-projects/unit-project-1/starter-code/project1-starter.ipynb
+++ b/projects/unit-projects/unit-project-1/starter-code/project1-starter.ipynb
@@ -8,7 +8,9 @@
     "\n",
     "In this first project you will create a framework to scope out data science projects. This framework will provide you with a guide to develop a well-articulated problem statement and analysis plan that will be robust and reproducible.\n",
     "\n",
-    "Let's start with an example problem statement first, and then move on to working with the admission dataset"
+    "Let's start with an example problem statement first, and then move on to working with the admission dataset.\n",
+    "\n",
+    "Complete all questions directly in the Jupyter notebook for your assignment. The first part is to help re-familairize yourself with the major concepts, and teh second part is what you will be evaluated on in the rubric for how well you can apply those concepts to a real dataset."
    ]
   },
   {
@@ -65,7 +67,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 4. What is the hypothesis (exp?"
+    "#### 4. What is the hypothesi?"
    ]
   },
   {
