--- a/classes/lesson-03/code/API AcquisitionContinued.ipynb
+++ b/classes/lesson-03/code/API AcquisitionContinued.ipynb
@@ -215,8 +215,8 @@
     "\n",
     "#Make an empty list to hold all of the data we collect from Wolfram Alpha. This list will hold lists that contain the Date, Closing Price, and Temperature for that day.\n",
     "alldata=[]\n",
-    "#We will only collect the first ten dates to show the process. Collecing the full year would take a much longer time, but you would just take out the [0:10] part\n",
-    "for date in dates[0:3]:\n",
+    "#We will only collect the first five dates to show the process. Collecing the full year would take a much longer time, but you would just take out the [0:5] part\n",
+    "for date in dates[0:5]:\n",
     "   \n",
     "    #write the query to get the closing price of the NSYE on a specific day\n",
     "    query=\"Closing price of NYSE on \" + date\n",
@@ -316,7 +316,7 @@
    "source": [
     "#### Try it yourself: The Wikipedia API\n",
     "\n",
-    "The following is the API url for Wikipedia to retrieve the abstract (intro paragraph) of a Wikipedia artlce\n",
+    "The following is the API url for Wikipedia to retrieve the text (with Wikimarkup) of a Wikipedia artlce\n",
     "\n",
     "\"https://en.wikipedia.org/w/api.php?action=query&prop=extracts&format=xml\"\n",
     "\n",
@@ -324,7 +324,7 @@
     "\n",
     "Your goal is to make a request to the Wikipedia API and extract the article text for any article title. Make sure to check what the title would be on Wikipedia.\n",
     "\n",
-    "Save the article text (not the XML) as a variable calle: article\n",
+    "Save the article text (not the XML) as a variable called: article\n",
     "\n",
     "Hint: \n",
     "\n",
