--- a/classes/lesson-03/code/AutomationPart1_solutions.ipynb
+++ b/classes/lesson-03/code/AutomationPart1_solutions.ipynb
@@ -65,9 +65,11 @@
     "Look at this website, for example:\n",
     "http://www.chicagoelections.com/en/election3.asp\n",
     "\n",
-    "Try to access the Mayoral Results for the 2015 Municipal Elections.\n",
+    "Try to access the Mayoral Results for the 2015 Municipal Elections using your browser.\n",
     "\n",
-    "After you access the results, try to get back to the results page directly without going through the form process."
+    "After you access the results, try to get back to that results page directly without going through the form process.\n",
+    "\n",
+    "Is it even possible?"
    ]
   },
   {
@@ -98,7 +100,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -153,7 +155,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -185,15 +187,13 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "#There is a form whose name \"form1\" \n",
     "#Tell the browser to select it\n",
-    "br.select_form(name=\"form1\")\n",
-    "form = br.form\n",
-    "print form"
+    "br.select_form(name=\"form1\")"
    ]
   },
   {
@@ -209,13 +209,14 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "#There is an dropdown menu called \"D3\". It's gives list of options of results.\n",
     "#Set the value to be the Municipal General Elections Value\n",
-    "form['D3'] = [\"2015 Municipal General - 2/24/15                  \"]\n"
+    "br.form['D3'] = [\"2015 Municipal General - 2/24/15                  \"]\n",
+    "print form"
    ]
   },
   {
@@ -230,7 +231,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -262,8 +263,7 @@
    "outputs": [],
    "source": [
     "br.select_form(name=\"form1\")\n",
-    "form = br.form\n",
-    "form['D3'] = [\"Mayor\"]"
+    "br.form['D3'] = [\"Mayor\"]"
    ]
   },
   {
@@ -279,7 +279,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -301,7 +301,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -322,7 +322,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -331,7 +331,9 @@
     "data_no_title = tabledata[2:-4]\n",
     "\n",
     "import pandas as pd\n",
-    "mayorvotes_df = pd.DataFrame(data_no_title[1:],columns=data_no_title[0])"
+    "mayorvotes_df = pd.DataFrame(data_no_title[1:],columns=data_no_title[0])\n",
+    "\n",
+    "mayorvotes_df.head(10)"
    ]
   },
   {
